--- a/package.json
+++ b/package.json
@@ -8,5 +8,23 @@
     "nodemailer": "^6.7.5",
     "nodemon": "^2.0.16",
     "path": "^0.12.7"
-  }
+  },
+  "name": "ceceresume",
+  "version": "1.0.0",
+  "main": "app.js",
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Cbrannan19/ceciliabrannanCV.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Cbrannan19/ceciliabrannanCV/issues"
+  },
+  "homepage": "https://github.com/Cbrannan19/ceciliabrannanCV#readme",
+  "description": ""
 }
